# rust_consclr

./: Cargo.toml  README.md
src/: colors.rs  fcbfr.rs  helper.rs  lib.rs  macros.rs  main.rs  prelude.rs
