[package]
name = "consclr"
version = "0.2.1"
edition = "2021"
author = "purplebut"
description = "a rust library to make console text colorful"
license = "MIT"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cbfr = "0.1.2"

